--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 server:
   port: 19090
 eureka:
+  instance:
+    hostname: eureka-server
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:19090/eureka/
+      defaultZone: http://eureka-server:19090/eureka/
